Migrating to Shuttle for hosting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,15 @@ edition = "2021"
 
 [dependencies]
 poise = "0.6.1"
-serenity = { version = "0.12.0", default-features = false }
 tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
-dotenv = "0.15.0"
 mysql = "*"
 chrono = "0.4.31"
 rand = "0.8.5"
 futures = "*"
+shuttle-runtime = "0.38.0"
+shuttle-axum = "0.38.0"
+shuttle-secrets = "0.38.0"
+shuttle-poise = "0.37.0"
+anyhow = "1.0.79"
+tracing = "0.1.40"
+shuttle-serenity = "0.38.0"
