--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,7 @@
 name: Docs
 on:
   push:
-    branches: [master]
+    branches: [feature/add-documentation]
 permissions:
   contents: read
   pages: write
