--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,8 @@ updates:
     target-branch: "develop"
     labels:
       - "dependencies"
+    reviewers:
+      - "dotunwrap"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
@@ -14,3 +16,5 @@ updates:
     target-branch: "develop"
     labels:
       - "dependencies"
+    reviewers:
+      - "dotunwrap"
